--- a/perf/meson.build
+++ b/perf/meson.build
@@ -2,7 +2,7 @@ incmicro = include_directories('.')
 
 subdir('micro')
 
-libcairoperf = static_library('cairoperf',
+libcomacperf = static_library('comacperf',
   [
     'comac-perf.c',
     'comac-perf-report.c',
@@ -12,10 +12,10 @@ libcairoperf = static_library('cairoperf',
     'comac-stats.h',
   ],
   include_directories: [incbase, incsrc],
-  dependencies: [pixman_dep, libcairomissing_dep, cairoboilerplate_dep],
+  dependencies: [pixman_dep, libcomacmissing_dep, comacboilerplate_dep],
 )
-libcairoperf_dep = declare_dependency(
-  link_with: libcairoperf,
+libcomacperf_dep = declare_dependency(
+  link_with: libcomacperf,
 )
 
 
@@ -25,8 +25,8 @@ analyse_trace = executable('comac-analyse-trace',
     '../src/comac-error.c',
   ],
   include_directories: [incbase],
-  dependencies: [pixman_dep, fontconfig_dep, libcairo_dep, cairoboilerplate_dep,
-    libcairoscript_dep, libcairomissing_dep],
+  dependencies: [pixman_dep, fontconfig_dep, libcomac_dep, comacboilerplate_dep,
+    libcomacscript_dep, libcomacmissing_dep],
 )
 
 perf_trace = executable('comac-perf-trace',
@@ -36,15 +36,15 @@ perf_trace = executable('comac-perf-trace',
     '../src/comac-hash.c',
   ],
   include_directories: [incbase, incsrc],
-  dependencies: [pixman_dep, fontconfig_dep, libcairoperf_dep, libcairoscript_dep,
-    cairoboilerplate_dep, libcairomissing_dep],
+  dependencies: [pixman_dep, fontconfig_dep, libcomacperf_dep, libcomacscript_dep,
+    comacboilerplate_dep, libcomacmissing_dep],
 )
 
 micro = executable('comac-perf-micro',
   [ 'comac-perf-micro.c', ],
   include_directories: [incbase, incsrc],
-  dependencies: [fontconfig_dep, libcairoperf_dep, libcairoperfmicro_dep,
-    cairoboilerplate_dep, libcairomissing_dep],
+  dependencies: [fontconfig_dep, libcomacperf_dep, libcomacperfmicro_dep,
+    comacboilerplate_dep, libcomacmissing_dep],
 )
 
 diff_files = executable('comac-perf-diff-files',
@@ -52,7 +52,7 @@ diff_files = executable('comac-perf-diff-files',
     'comac-perf-diff-files.c',
   ],
   include_directories: [incbase, incsrc],
-  dependencies: [libcairoperf_dep, cairoboilerplate_dep],
+  dependencies: [libcomacperf_dep, comacboilerplate_dep],
 )
 
 print = executable('comac-perf-print',
@@ -60,7 +60,7 @@ print = executable('comac-perf-print',
     'comac-perf-print.c',
   ],
   include_directories: [incbase, incsrc],
-  dependencies: [libcairoperf_dep, cairoboilerplate_dep],
+  dependencies: [libcomacperf_dep, comacboilerplate_dep],
 )
 
 chart = executable('comac-perf-chart',
@@ -68,7 +68,7 @@ chart = executable('comac-perf-chart',
     'comac-perf-chart.c',
   ],
   include_directories: [incbase, incsrc],
-  dependencies: [libcairoperf_dep, cairoboilerplate_dep],
+  dependencies: [libcomacperf_dep, comacboilerplate_dep],
 )
 
 compare_backends = executable('comac-perf-compare-backends',
@@ -76,5 +76,5 @@ compare_backends = executable('comac-perf-compare-backends',
     'comac-perf-compare-backends.c',
   ],
   include_directories: [incbase, incsrc],
-  dependencies: [libcairoperf_dep, cairoboilerplate_dep],
+  dependencies: [libcomacperf_dep, comacboilerplate_dep],
 )
