--- a/util/comac-script/meson.build
+++ b/util/comac-script/meson.build
@@ -1,4 +1,4 @@
-cairoscript_interpreter_sources = [
+comacscript_interpreter_sources = [
   'comac-script-file.c',
   'comac-script-hash.c',
   'comac-script-interpreter.c',
@@ -8,7 +8,7 @@ cairoscript_interpreter_sources = [
   'comac-script-stack.c',
 ]
 
-cairoscript_interpreter_headers = [
+comacscript_interpreter_headers = [
   'comac-script-interpreter.h',
 ]
 
@@ -24,40 +24,40 @@ csi_trace_sources = [
   'csi-trace.c',
 ]
 
-libcairoscript = static_library('comac-script-interpreter',
-  cairoscript_interpreter_sources,
+libcomacscript = static_library('comac-script-interpreter',
+  comacscript_interpreter_sources,
   include_directories: [incbase],
-  dependencies: deps + [libcairo_dep, lzo_dep],
+  dependencies: deps + [libcomac_dep, lzo_dep],
   install: true,
 )
 
-libcairoscript_dep = declare_dependency(link_with: libcairoscript,
+libcomacscript_dep = declare_dependency(link_with: libcomacscript,
   include_directories: include_directories('.'),
-  dependencies: libcairo_dep)
+  dependencies: libcomac_dep)
 
-pkgmod.generate(libcairoscript,
-  libraries: [libcairo],
-  description: 'script surface backend for cairo graphics library',
+pkgmod.generate(libcomacscript,
+  libraries: [libcomac],
+  description: 'script surface backend for comac graphics library',
   subdirs: [meson.project_name()],
 )
 
-meson.override_dependency('comac-script-interpreter', libcairoscript_dep)
+meson.override_dependency('comac-script-interpreter', libcomacscript_dep)
 
 csi_replay_exe = executable('csi-replay', csi_replay_sources,
   include_directories: [incbase],
-  dependencies: deps + [libcairo_dep, libcairoscript_dep],
+  dependencies: deps + [libcomac_dep, libcomacscript_dep],
 )
 
 csi_exec_exe = executable('csi-exec', csi_exec_sources,
   include_directories: [incbase],
-  dependencies: deps + [libcairo_dep, libcairoscript_dep],
+  dependencies: deps + [libcomac_dep, libcomacscript_dep],
 )
 
 if feature_conf.get('CAIRO_HAS_SCRIPT_SURFACE', 0) == 1 and conf.get('HAVE_LIBGEN_H', 0) == 1
   csi_trace_exe = executable('csi-trace', csi_trace_sources,
     include_directories: [incbase],
-    dependencies: deps + [libcairo_dep, libcairoscript_dep],
+    dependencies: deps + [libcomac_dep, libcomacscript_dep],
   )
 endif
 
-install_headers(cairoscript_interpreter_headers, subdir: 'cairo')
+install_headers(comacscript_interpreter_headers, subdir: 'comac')
