--- a/util/cairo-fdr/meson.build
+++ b/util/cairo-fdr/meson.build
@@ -1,10 +1,10 @@
-cairo_fdr_sources = [
+comac_fdr_sources = [
   'fdr.c',
 ]
 
-libcairofdr = library('comac-fdr', cairo_fdr_sources,
+libcomacfdr = library('comac-fdr', comac_fdr_sources,
   include_directories: [incbase, incsrc],
   dependencies: deps,
   install: true,
-  install_dir: join_paths(get_option('prefix'), get_option('libdir'), 'cairo'),
+  install_dir: join_paths(get_option('prefix'), get_option('libdir'), 'comac'),
 )
