--- a/util/comac-trace/meson.build
+++ b/util/comac-trace/meson.build
@@ -1,20 +1,20 @@
-cairo_trace_sources = [
+comac_trace_sources = [
   'trace.c',
 ]
 
 if conf.get('CAIRO_HAS_SYMBOL_LOOKUP', 0) == 1
-  cairo_trace_sources += ['lookup-symbol.c']
+  comac_trace_sources += ['lookup-symbol.c']
 endif
 
-shared_lib_ext = libcairo.full_path().split('.')[-1]
+shared_lib_ext = libcomac.full_path().split('.')[-1]
 
-libcairotrace = library('comac-trace', cairo_trace_sources,
+libcomactrace = library('comac-trace', comac_trace_sources,
   include_directories: [incbase, incsrc],
   dependencies: deps,
   link_args: extra_link_args,
   c_args: ['-DSHARED_LIB_EXT="@0@"'.format(shared_lib_ext),],
   install: true,
-  install_dir: get_option('libdir') / 'cairo',
+  install_dir: get_option('libdir') / 'comac',
 )
 
 trace_conf = configuration_data()
@@ -26,7 +26,7 @@ trace_conf.set('CAIRO_VERSION_MINOR', meson.project_version().split('.')[1])
 trace_conf.set('CAIRO_VERSION_MICRO', meson.project_version().split('.')[2])
 trace_conf.set('SHLIB_EXT', shared_lib_ext)
 
-configure_file(input: 'cairo-trace.in',
+configure_file(input: 'comac-trace.in',
   output: 'comac-trace',
   configuration: trace_conf,
   install: true,
